reparar bug de z-index

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -225,6 +225,13 @@
 }
 
 @layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
   .animate-float {
     animation: float 6s ease-in-out infinite;
   }
